# App-Review-Insights-Analyser-project

./: .gitignore  ProblemSatement.txt  README.md  api_bridge.py  app.js  architecture.md  data.json  edge-case.md  gmail_service.py  implementation-plan.md  ingestion.py  normalized_reviews.json  orchestrator.py  print_results.py  problemStatement.md  pyproject.toml  raw_reviews.json  reasoning.py  requirements.txt  run_history.json  sample_reviews.json  styles.css  temp_normalized.json  temp_reasoning.json  test_formatter.py  test_ingestion.py
frontend/: app.js  index.html
mcp_server/: docs_service.py  google_auth.py  server.py
