[project]
name = "app-review-insights"
version = "0.1.0"
description = "App Review Insights Analyser"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "requests",
    "mcp",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "aiofiles",
    "google-play-scraper",
    "pandas",
    "emoji",
    "langdetect",
    "scikit-learn",
    "hdbscan",
    "umap-learn",
    "sentence-transformers",
    "groq"
]

[tool.vercel]
entrypoint = "api_bridge:app"
